<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <!-- "Вы в очереди" header -->
    <TextView
        android:id="@+id/tv_queue_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queue_header"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_queue_label"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3" />

    <!-- "Ваш номер в очереди:" label -->
    <TextView
        android:id="@+id/tv_queue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/queue_position_label"
        android:textSize="18sp"
        android:textColor="#555555"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_queue_header"
        app:layout_constraintBottom_toTopOf="@id/tv_queue_position" />

    <!-- Large position number -->
    <TextView
        android:id="@+id/tv_queue_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="96sp"
        android:textStyle="bold"
        android:textColor="#1565C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_queue_label"
        app:layout_constraintBottom_toTopOf="@id/tv_estimated_time"
        tools:text="3" />

    <!-- Estimated wait time -->
    <TextView
        android:id="@+id/tv_estimated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_queue_position"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel_call"
        tools:text="Примерное ожидание: ~9 минут" />

    <!-- Cancel button -->
    <Button
        android:id="@+id/btn_cancel_call"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_cancel_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time" />

</androidx.constraintlayout.widget.ConstraintLayout>
